tests/fpga-debugging/axi-lite-s1/expects/s1_buggy.bi.expect
// trace 0
trace {
    idle();  // [time: 0ns -> 25ns]
    write(64, 2147483648, 0, 0);  // [time: 25ns -> 100ns]
}
// trace 0
trace {
    idle();  // [time: 0ns -> 25ns]
}
error: [read_v2@11?1!] executing step 3 of the transaction: 1 != 0
    ┌─ tests/fpga-debugging/axi-lite-s1/s1_buggy.prot:169:5
    │
169 │     assert_eq(DUT.S_AXI_ARREADY, 1'b0);
    │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [read_v2@11?1!] executing step 3 of the transaction: 1 != 0


// trace 1
trace {
    idle();  // [time: 0ns -> 25ns]
}
error: [read_v2@11?2?] executing step 3 of the transaction: 1 != 0
    ┌─ tests/fpga-debugging/axi-lite-s1/s1_buggy.prot:163:9
    │
163 │         DUT.S_AXI_RREADY := 1'b0;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ [read_v2@11?2?] executing step 3 of the transaction: 1 != 0

Error: "Monitor failed"
---CODE---
1
